crates/cayenne/tests/snapshots/integration__partition_pruning_test__bucket_partition_range_filter.snap
---
source: crates/cayenne/tests/partition_pruning_test.rs
expression: explain_plan
---
CayenneAccelerationExec: snapshots_scanned=1, files_scanned=1
  SortExec: expr=[id@0 ASC NULLS LAST], preserve_partitioning=[false]
    DataSourceExec: file_groups={1 group: [[<TEMP_PATH>/<FILE>.vortex]]}, projection=[id, name, value], file_type=vortex, predicate: id@0 >= 3 AND id@0 <= 7
