crates/cayenne/tests/snapshots/integration__partition_pruning_test__data_filter_only.snap
---
source: crates/cayenne/tests/partition_pruning_test.rs
expression: explain_plan
---
CayenneAccelerationExec: snapshots_scanned=1, files_scanned=1
    DataSourceExec: file_groups={1 group: [[<TEMP_PATH>/<FILE>.vortex]]}, projection=[id, region, value], file_type=vortex, predicate: value@2 > 400
  SortExec: expr=[id@0 ASC NULLS LAST], preserve_partitioning=[false]
